tests/paczka1/fuzzy1/37933032.err
Error in line 2: dVbr7 S985 15,1
Error in line 4: obpzZMx A576 81,0
Error in line 7: dVbr7 S372 85,7
Error in line 9: PSCT S985 47,2
Error in line 15: 6ytpf S372 41,7
Error in line 16: obpzZMx S985 52,3
Error in line 14: PSCT A576 93,9
Error in line 23: PSCT S985 85,5
Error in line 29: DDX4jrVqE S985 86,5
Error in line 34: obpzZMx S372 27,6
